# libcdk

./: HOW_TO_BUILD_MEDIA_LIBS
audiocodec/: Makefile.am  configure.ac  remove-unused-files-audiocodec.sh  tccaudiocodec_build
audiocodec/aacdec/: Makefile.am
audiocodec/aacdec/fdk_aac/: ChangeLogByTelechips  HOW_TO_BUILD  Makefile.am  NOTICE  TCAS_AAC_DEC.c  TCAS_AAC_ENC.c  THIRD_PARTY_MODIFIED_VERSION_OF_THE_FRAUNHOFER_FDK_AAC  aacdec.c  configure.ac  fdk-aac.pc  tcc_build
audiocodec/aacdec/fdk_aac/arm_ads_make/: readme.txt
audiocodec/aacdec/fdk_aac/arm_ads_make/build_rule/: arm_elf.mk  config  rule_ads.mk
audiocodec/aacdec/fdk_aac/arm_ads_make/make_app/: RunRVDEBUG.bat  api_def.mk  sh_make_sim
audiocodec/aacdec/fdk_aac/arm_ads_make/make_app/sim_header/: aacenc_lib.h
audiocodec/aacdec/fdk_aac/arm_ads_make/make_app/sim_source/: aacenc_sim.c
audiocodec/aacdec/fdk_aac/arm_ads_make/make_lib/: lib_armv5_def.mk  make_lib.bat  sh_make_lib
audiocodec/aacdec/fdk_aac/libAACdec/include/: aacdecoder_lib.h
audiocodec/aacdec/fdk_aac/libAACdec/src/: aac_ram.cpp  aacdecoder.cpp  aacdecoder.h  aacdecoder_lib.cpp  block.cpp  ldfiltbank.cpp  ldfiltbank.h
audiocodec/aacdec/fdk_aac/libAACenc/src/: transform.cpp
audiocodec/aacdec/fdk_aac/libFDK/include/: FDK_bitstream.h  common_fix.h  dct.h  fft.h  mdct.h  qmf.h
audiocodec/aacdec/fdk_aac/libFDK/include/arm/: clz_arm.h  cplx_mul.h  fixmadd_arm.h  fixmul_arm.h
audiocodec/aacdec/fdk_aac/libFDK/include/x86/: clz_x86.h
audiocodec/aacdec/fdk_aac/libFDK/src/: dct.cpp  fft.cpp  mdct.cpp  qmf.cpp
audiocodec/aacdec/fdk_aac/libFDK/src/arm/: dct_arm_ads.cpp  qmf_arm.cpp
audiocodec/aacdec/fdk_aac/libMpegTPDec/include/: tpdec_lib.h
audiocodec/aacdec/fdk_aac/libMpegTPDec/src/: tpdec_lib.cpp
audiocodec/aacdec/fdk_aac/libSBRdec/include/: sbrdecoder.h
audiocodec/aacdec/fdk_aac/libSBRdec/src/: env_calc.cpp  env_calc.h  psdec.cpp  psdec.h  psdec_hybrid.cpp  psdec_hybrid.h  sbr_dec.cpp  sbr_dec.h  sbr_ram.h  sbrdecoder.cpp
audiocodec/aacdec/fdk_aac/libSBRenc/src/: ps_main.cpp  sbr_encoder.cpp
audiocodec/aacdec/fdk_aac/libSYS/include/: genericStds.h
audiocodec/aacdec/fdk_aac/libSYS/src/: genericStds.cpp
audiocodec/ac3dec/: Makefile.am  ac3dec.c
audiocodec/amrnbdec/: Makefile.am  amrnbdec.c
audiocodec/apedec/: Makefile.am  apedec.c
audiocodec/ddpdec/: Makefile.am  ddpdec.c
audiocodec/dtsdec/: Makefile.am  dtsdec.c
audiocodec/flacdec/: Makefile.am  flacdec.c
audiocodec/flacdec/include/: flac_dec_callback.h  flac_define.h  tcas_typedef.h  tcc_flac_assert.h  tcc_flac_bitreader.h  tcc_flac_crc.h  tcc_flac_dec.h  tcc_flac_dec_core.h  tcc_flac_fixed.h  tcc_flac_format.h  tcc_flac_lpc.h  tcc_flac_md5.h  tcc_flac_streamdec.h  tcc_flac_streamdec_pt.h
audiocodec/flacdec/src/: TCC_FLACDEC_bitreader.c  TCC_FLACDEC_decode.c  TCC_FLACDEC_fixed.c  TCC_FLACDEC_lpc.c  TCC_FLACDEC_stream_decoder.c  TCC_FLAC_DEC.c
audiocodec/include/: adec.h  aenc.h  audio_common.h  tcc_audio_interface.h
audiocodec/mp3dec/: Makefile.am  TCC_MP3_DEC.c  mp3dec.c  patent_disclaimer.txt
audiocodec/mp3dec/src/: pvmp3_decode_huff_cw.cpp
audiocodec/opusdec/: Makefile.am  opusdec.c
audiocodec/wavdec/: Makefile.am  wavdec.c
audiocodec/wavdec/lib/: libTCC_ARMv7_WAVDEC_LINUX_V4.20.03_32bit_Kernel.aa
audiocodec/wmadec/: Makefile.am  wmadec.c
demuxer/: Makefile.am  configure.ac  remove-unused-files-demuxer.sh  tccdemuxer_build
demuxer/apedmx/: Makefile.am  apedmx.c
demuxer/asfdmx/: Makefile.am  asfdmx.c
demuxer/avidmx/: Makefile.am  avidmx.c
demuxer/flvdmx/: Makefile.am  flvdmx.c
demuxer/include/: av_common_dmx.h  tcc_demux_interface.h
demuxer/mkvdmx/: Makefile.am  mkvdmx.c
demuxer/mp4dmx/: Makefile.am  mp4dmx.c
demuxer/mpgdmx/: Makefile.am  mpgdmx.c
demuxer/oggdmx/: Makefile.am  oggdmx.c
demuxer/tsdmx/: Makefile.am  tsdmx.c
videocodec/: Makefile.am  configure.ac  tccvideocodec_build
videocodec/wmv78dec/: Makefile.am
